--- a/.env-backup
+++ b/.env-backup
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:rKt2t/1zRZYgcTsHJ2pA0VkdeFPT3O2R4sLZPknTff0=
+APP_KEY=base64:D8GJ/kBR2d11jcHiI36Tw5HKuVK/lqapX9LuTdviWQY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -38,7 +38,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=file
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
